--- a/setting files/plsql_setting.ini
+++ b/setting files/plsql_setting.ini
@@ -5,7 +5,7 @@ VerticalGradient=True
 DefaultGradient=True
 GradientCol1=0
 GradientCol2=0
-NullValueColor=15073279
+NullValueColor=65535
 AltRowColor=15073253
 CompareColor=13421823
 ErrorBkgCol=65535
@@ -142,7 +142,7 @@ AutoReplaceFilename=D:\office_dev_conf\plsql\AutoReplace.txt
 
 [Oracle]
 SessionMode=0
-OpenTransaction=0
+OpenTransaction=1
 CheckConnection=False
 SelectedHome=
 OCIFile=
@@ -210,6 +210,7 @@ Edit / Copy=16451
 Edit / Paste=16470
 Edit / Select All=16449
 Edit / Recall Statement=16453
+Edit / Special Copy / Java=24643
 Edit / Selection / Indent=16457
 Edit / Selection / Unindent=16469
 Edit / Selection / Uppercase=24661
@@ -236,6 +237,7 @@ Tools / Macro / Record=122
 Tools / Macro / Playback=123
 Tools / Explain Plan=116
 Tools / Code Assistant=117
+Tools / Query Builder=32849
 Help / Oracle HTML Manuals=112
 Window: Next Window=16393
 Window: Previous Window=24585
